--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "json-server --watch db.json --port 3000"
+    "start": "concurrently \"npm run dev\" \"json-server --watch db.json -m ./node_modules/json-server-auth --port 3000\""
   },
   "devDependencies": {
     "vite": "^4.3.9"
   },
   "dependencies": {
     "auth": "^0.0.9",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "concurrently": "^8.2.2",
     "json-server": "^0.17.4",
+    "json-server-auth": "^2.1.0",
     "navigo": "^8.11.1"
   }
 }
